<package>
  <name>graph_slam</name>
  <version>0.1.0</version>
  <description>
    A graph-based SLAM algorithm.
  </description>

  <maintainer email="frost@iti.uni-luebeck.de">Jan Frost</maintainer>
  <license>GPLv3</license>
  <author>Jan Frost</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>graph_slam_common</build_depend>
  <build_depend>graph_optimization</build_depend>
  <build_depend>map_projection</build_depend>
  <build_depend>place_recognition</build_depend>
  <build_depend>transformation_estimation</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_filters</build_depend>

  <run_depend>graph_slam_common</run_depend>
  <run_depend>graph_optimization</run_depend>
  <run_depend>map_projection</run_depend>
  <run_depend>place_recognition</run_depend>
  <run_depend>transformation_estimation</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_filters</run_depend>
</package>
