<package>
  <name>graph_slam_tools</name>
  <version>0.1.0</version>
  <description>
    Common tools for graph-based SLAM, e.g. visualization.
  </description>

  <maintainer email="frost@iti.uni-luebeck.de">Jan Frost</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/graph_slam_tools</url>
  <author>Jan Frost</author>
  <author>Helge Klüssendorff</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>graph_slam_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_visualization</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>occupancy_grid_utils</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roslib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>graph_slam_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_visualization</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>gps_common</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>occupancy_grid_utils</run_depend>

  <export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lgraph_slam_tools" cflags="-I${prefix}/include"/>
  </export>
</package>
