<package>
  <name>iti_slam_launch</name>
  <version>0.1.0</version>
  <description>
    A collection of launch files for graph-based SLAM.
  </description>

  <maintainer email="frost@iti.uni-luebeck.de">Jan Frost</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/iti_slam_launch</url>
  <author>Jan Frost</author>
  <author>Helge Klüssendorff</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>feature_extraction</run_depend>
  <run_depend>graph_slam</run_depend>
  <run_depend>graph_slam_msgs</run_depend>
  <run_depend>graph_slam_tools</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <export>

  </export>
</package>
