<package>
  <name>iti_slam_launch</name>
  <version>0.1.0</version>
  <description>
    A collection of launch files for graph-based SLAM.
  </description>

  <maintainer email="frost@iti.uni-luebeck.de">Jan Frost</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
