<package>
  <name>place_recognition</name>
  <version>0.1.0</version>
  <description>
    place_recognition
  </description>

  <maintainer email="frost@iti.uni-luebeck.de">Jan Frost</maintainer>
  <license>GPLv3</license>
  <url type="website">http://ros.org/wiki/place_recognition</url>
  <author>Jan Frost</author>
  <author>Helge Klüssendorff</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>graph_slam_common</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>graph_slam_common</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lplace_recognition" cflags="-I${prefix}/include"/>
  </export>
</package>
