<package>
  <name>transformation_estimation</name>
  <version>0.1.0</version>
  <description>
    transformation_estimation
  </description>

  <maintainer email="frost@iti.uni-luebeck.de">Jan Frost</maintainer>
  <license>GPLv3</license>
  <url type="website">http://ros.org/wiki/transformation_estimation</url>
  <author>Jan Frost</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>graph_slam_common</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>csm</build_depend>

  <run_depend>graph_slam_common</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>csm</run_depend>

  <export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -ltransformation_estimation" cflags="-I${prefix}/include"/>
  </export>
</package>
